--- a/index.html
+++ b/index.html
@@ -39,6 +39,43 @@
 }
 
     </style>
+<style>
+    body {
+      font-family: 'Sono', sans-serif;
+    }
+    .pricing-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap:2rem;
+      flex-direction: row;
+      height:100vh;
+    }
+    .plan-title{
+      font-size: 30px;
+      align-items: center;
+    }
+    .plan-price{
+      font-size: 50px;
+    }
+    .pricing-plan{
+      background-color: #f2f2f2;
+      text-align: center;
+    }
+    .plan-button{
+      padding: 10px;
+      background-color: red;
+    }
+    @media (max-width: 1250px) {
+      .pricing-container{
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+    }
+    }
+</style>
+
+
 </head>
 <body>
     <nav>
@@ -51,5 +88,35 @@
     </ul>
     </header>
     </nav>
+    <div class="pricing-container">
+        <div class="pricing-plan">
+          <div class="plan-title">CEO</div>
+          <div class="plan-price">GAYATHRI</div>
+          <ul class="plan-features">
+            <li>23071A6629</li>
+            <li>AIML</li>
+            <li>SECTION-A</li>
+          </ul>
+        </div>
+        <div class="pricing-plan">
+          <div class="plan-title">CHAIRPERSON</div>
+          <div class="plan-price">AAKRUTHI</div>
+          <ul class="plan-features">
+            <li>23071A6622</li>
+            <li>AIML</li>
+            <li>SECTION-A</li>
+          </ul>
+        </div>
+        <div class="pricing-plan">
+          <div class="plan-title">PRESIDENT</div>
+          <div class="plan-price">DEVAAMSH</div>
+          <ul class="plan-features">
+            <li>23071A6619</li>
+            <li>AIML</li>
+            <li>SECTION-A</li>
+          </ul>
+        </div>
+      </div>
+
 </body>
 </html>
