--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
     }
     }
 </style>
+<style>
+    footer{
+background-color: black;
+color:white;
+padding: 50px 0px;
+display: flex;
+justify-content: space-evenly;
+}
+</style>
 
 
 </head>
@@ -119,4 +128,17 @@
       </div>
 
 </body>
+<footer>
+    <address>
+        <p>hyderabad</p>
+        <p>kphb</p>
+        <p>500090</p>
+    </address>
+    <div>
+        <p>work@mail.com</p>
+        <p>777333888</p>
+    </div>
+ </footer>
+
+
 </html>
